$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.124 2005/04/27 10:00:18 ph10 Exp $

Change log file for Exim from version 4.21
-------------------------------------------


Exim version 4.51
-----------------

TK/01 Added Yahoo DomainKeys support via libdomainkeys. See
      doc/experimental-spec.txt for details. (http://domainkeys.sf.net)

TK/02 Fix ACL "control" statement not being available in MIME ACL.

TK/03 Fix ACL "regex" condition not being available in MIME ACL.

PH/01 Installed a patch from the Sieve maintainer that allows -bf to be used
      to test Sieve filters that use "vacation".

PH/02 Installed a slightly modified version of Nikos Mavrogiannopoulos' patch
      that changes the way the GnuTLS parameters are stored in the cache file.
      The new format can be generated externally. For backward compatibility,
      if the data in the cache doesn't make sense, Exim assumes it has read an
      old-format file, and it generates new data and writes a new file. This
      means that you can't go back to an older release without removing the
      file.

PH/03 A redirect router that has both "unseen" and "one_time" set does not
      work if there are any delivery delays because "one_time" forces the
      parent to be marked "delivered", so its unseen clone is never tried
      again. For this reason, Exim now forbids the simultaneous setting of
      these two options.

PH/04 Change 4.11/85 fixed an obscure bug concerned with addresses that are
      redirected to themselves ("homonym" addresses). Read the long ChangeLog
      entry if you want to know the details. The fix, however, neglected to
      consider the case when local delivery batching is involved. The test for
      "previously delivered" was not happening when checking to see if an
      address could be batched with a previous (undelivered) one; under
      certain circumstances this could lead to multiple deliveries to the same
      address.
